--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "req4d",
   "version": "1.0.0",
   "description": "request,but use decorator",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
+    "build:types": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "npm run build:types && webpack"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
     "typescript": "^5.1.6",
     "webpack": "^5.88.1",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
