--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "reflect-metadata": "^0.1.13"
   }
 }
