--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.5.4",
     "axios": "^1.4.0",
     "jest": "^29.6.4",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "yaml": "^2.3.4"
   }
 }
