--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@types/jest": "^29.5.4",
     "axios": "^1.4.0",
+    "form-data": "^4.0.0",
     "jest": "^29.6.4",
     "reflect-metadata": "^0.1.13",
     "yaml": "^2.3.4"
